--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<title>No Web Presence Here</title>
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:400" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Chango" rel="stylesheet">
-	<link type="text/css" rel="stylesheet" href="css/style.css" />
+	<link type="text/css" rel="stylesheet" href="style.css" />
 </head>
 <body>
 	<div id="notfound">
