--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1"
-	<title>No Web Presence Here</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>No Web Presence !</title>
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:400" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Chango" rel="stylesheet">
 	<link type="text/css" rel="stylesheet" href="style.css" />
@@ -16,7 +16,7 @@
 				<div class="notfound-404">
 					<h1>!</h1>
 				</div>
-				<h2>Error<br>404</h2>
+				<h2>Stop<br>Now !</h2>
 			</div>
 			<p>Any page you are looking for doesn't exist.</p>
 		</div>
